force-app/main/default/objects/CQ_SD_SQX_Employee__c/CQ_SD_SQX_Employee__c.object-meta.xml
<CustomObject>
    <description>This Object Stores the date for Each Employees</description>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>