force-app/main/default/objects/CQ_SD_SQX_Employee__c/fields/CQ_SD_Employee_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Employee_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Lookup</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>