force-app/main/default/objects/CQ_SD_SQX_Employee__c/fields/CQ_SD_SQX_Manager_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_SQX_Manager_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to represent Parent Lookup</description>
    <label>Manager Lookup</label>
    <referenceTo>CQ_SD_SQX_Manager__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>