force-app/main/default/objects/CQ_SD_SQX_Employee__c/fields/CQ_SD_SQX_User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_SQX_User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserLookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>