force-app/main/default/objects/CQ_SD_SQX_Employee__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <length>155</length>
    <type>Text</type>
</CustomField>