force-app/main/default/objects/CQ_SD_SQX_Employee__c/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <description>Will contain Joining Date of Employee</description>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>