force-app/main/default/objects/CQ_SD_SQX_Employee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Shows the position hold by the Employee</description>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>