force-app/main/default/objects/CQ_SD_SQX_Employee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Contains Title for the Name of Employee</description>
    <label>Title</label>
    <length>15</length>
    <type>Text</type>
</CustomField>